# haubaa

./: .gitignore  ARCHITECTURE_V3.md  BUILD_PHASES_V3.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hauba.yaml.example  install.ps1  install.sh  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  server.py  v3-architecture.md
.claude/: settings.json
.claude/skills/: agent-architecture.md  python-hauba-dev.md  testing-strategy.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
scripts/: demo_browser.py  generate_demo_gifs.py
skills/core/: debugging-and-repair.md  devops-and-deployment.md  full-stack-engineering.md  research-and-analysis.md
src/hauba/: __init__.py  __main__.py  cli.py  doctor.py  exceptions.py  security.py
src/hauba/agents/: __init__.py  base.py  computer_use.py  coworker.py  director.py  registry.py  subagent.py  worker.py
src/hauba/api/: __init__.py  server.py
src/hauba/brain/: __init__.py  deliberation.py  intent.py  llm.py  planner.py
src/hauba/bundled_skills/: 3d-and-blender.md  api-design-and-integration.md  automation-and-scripting.md  code-generation.md  data-engineering.md  data-processing.md  debugging-and-repair.md  document-generation.md  full-stack-engineering.md  game-development.md  image-generation.md  machine-learning.md  refactoring-and-migration.md  research-and-analysis.md  security-hardening.md  testing-and-quality.md  video-editing.md  web-scraping.md
src/hauba/bundled_strategies/: api-development.yaml  code-review-and-refactor.yaml  data-pipeline.yaml  research-and-prototype.yaml
src/hauba/channels/: __init__.py  discord.py  gateway.py  telegram.py  voice.py  whatsapp.py  whatsapp_webhook.py
src/hauba/compose/: __init__.py  parser.py  runner.py
src/hauba/core/: __init__.py  config.py  constants.py  dag.py  events.py  notifier.py  quality.py  replay.py  setup.py  types.py
src/hauba/daemon/: __init__.py  agent.py  autostart.py  queue.py
src/hauba/engine/: __init__.py  agent_engine.py  agents.py  context.py  copilot_engine.py  llm.py  mcp_servers.py  prompts.py  session_tracker.py  tool_registry.py  tools.py  types.py
src/hauba/ledger/: __init__.py  gates.py  tracker.py  wal.py
src/hauba/memory/: __init__.py  store.py
src/hauba/plugins/: __init__.py  base.py  loader.py  registry.py
src/hauba/services/: __init__.py  email.py  reply_assistant.py
src/hauba/skills/: __init__.py  cli.py  loader.py  matcher.py  strategy.py
src/hauba/tools/: __init__.py  base.py  bash.py  browser.py  fetch.py  files.py  git.py  screen.py  web.py
src/hauba/ui/: __init__.py  interactive.py  keyboard.py  replay.py  terminal.py  web.py
static/: landing.html
strategies/: bug-fixing.yaml  saas-building.yaml
tests/: conftest.py
tests/e2e/: test_browser_demo.py
tests/integration/: test_e2e_pipeline.py  test_phase2_pipeline.py  test_phase3_pipeline.py  test_phase4_pipeline.py  test_phase5_pipeline.py
tests/unit/agents/: test_computer_use.py
tests/unit/brain/: test_intent.py
tests/unit/channels/: test_discord.py  test_gateway.py  test_telegram.py  test_voice.py  test_whatsapp.py  test_whatsapp_queue.py  test_whatsapp_v4.py  test_whatsapp_webhook.py
tests/unit/compose/: test_parser.py  test_runner.py
tests/unit/core/: test_config.py  test_dag.py  test_events.py  test_notifier.py  test_quality.py  test_replay.py
tests/unit/daemon/: test_agent.py  test_autostart.py  test_queue.py  test_queue_v4.py
tests/unit/engine/: test_agent_engine_v4.py  test_context_manager.py  test_copilot_engine.py  test_interactive_engine.py  test_llm_client.py  test_prompts_v4.py  test_session_tracker.py  test_tool_registry.py
(+24 files in other folders)
